--- a/help/templates/help/includes/accountsFeature.html
+++ b/help/templates/help/includes/accountsFeature.html
@@ -1,20 +1,20 @@
-<!--Utility Feature-->
+<!--Accounts Feature-->
 <h2>Features</h2>
 <ul>
     <li>
-        Setup organisasi (Departement, Section)
+        Setup user (flow chart approval)
         <ul>
             <li>
-                Nama
-            </li>
-            <li>
-                Description
+                Username
             </li>
             <li>
                 Initial
             </li>
             <li>
-                Role (Originator, Executor)
+                Forward/Reverse to
+            </li>
+            <li>
+                Setup organisasi
             </li>
         </ul>
     </li>
