--- a/help/templates/help/includes/pm_pdmFeature.html
+++ b/help/templates/help/includes/pm_pdmFeature.html
@@ -1,5 +1,5 @@
 <!--PM PdM Start-->
-<h2>Feature</h2>
+<h2>Features</h2>
 <p>
     Module PM PdM adalah module yang menangani Preventive dan Predictive Maintenance termasuk di dalamnya kalibrasi, 
     meliputi hal-hal berikut ini :
