--- a/help/templates/help/includes/workOrderFeature.html
+++ b/help/templates/help/includes/workOrderFeature.html
@@ -1,5 +1,5 @@
 <!--Work Order Feature-->
-<h2>Feature</h2>
+<h2>Features</h2>
 <p>
     Module MWO adalah modul yang menangani permintaan pekerjaan (work order), 
     meliputi hal hal berikut:                
