--- a/pm_pdm/templates/pm_pdm/home.html
+++ b/pm_pdm/templates/pm_pdm/home.html
@@ -1,7 +1,7 @@
 {% extends "base_pm_pdm.html" %}
 
 {% block title %}
-    <title>cmms pm_ppdm</title>
+    cmms pm_ppdm
 {% endblock %}
 {% block body %}
   <div class="container-fluid">
