--- a/utility/templates/utility/home.html
+++ b/utility/templates/utility/home.html
@@ -1,7 +1,7 @@
 {% extends "base_cmms.html" %}
 
 {% block title %}
-    <title>cmms utility</title>
+    cmms utility
 {% endblock %}
 
 {% block body %}
