--- a/work_order/templates/work_order/WoCompletion_form.html
+++ b/work_order/templates/work_order/WoCompletion_form.html
@@ -8,10 +8,10 @@
 {% block content %}
 
   <!--For Work order request-->
-  {% include 'Wo_request.html' %}
+  {% include 'work_order/includes/Wo_request.html' %}
 
   <!--For Work order instruction-->
-  {% include 'Wo_instruction.html' %}
+  {% include 'work_order/includes/Wo_instruction.html' %}
 
   <h4>Work Order Completion</h4>
 
