--- a/work_order/templates/work_order/WoInstruction_form.html
+++ b/work_order/templates/work_order/WoInstruction_form.html
@@ -7,7 +7,7 @@
 {% block content %}
 
   <!--For Work order request-->
-  {% include 'Wo_request.html' %}
+  {% include 'work_order/includes/Wo_request.html' %}
 
   <hr>
 
