--- a/work_order/templates/work_order/WoReport_form.html
+++ b/work_order/templates/work_order/WoReport_form.html
@@ -8,12 +8,12 @@
 
     <h4>Work Order Report</h4>
     <!--For Work order request-->
-    {% include 'Wo_request.html' %}
+    {% include 'work_order/includes/Wo_request.html' %}
 
     <!--For Work order instruction-->
-    {% include 'Wo_instruction.html' %}
+    {% include 'work_order/includes/Wo_instruction.html' %}
 
     <!--For Work order instruction-->
-    {% include 'Wo_execution.html' %}
+    {% include 'work_order/includes/Wo_execution.html' %}
 
 {% endblock %}
