update django-crispy-forms and env

--- a/utility/templates/utility/ImportFileForm.html
+++ b/utility/templates/utility/ImportFileForm.html
@@ -3,7 +3,7 @@
 {% load extra_tag %}
 
 {% block title %}
-    <title>utility config</title>
+    utility config
 {% endblock %}
 {% block content %}
     <form action="" method="post" enctype="multipart/form-data">
