--- a/utility/templates/utility/SectionForm.html
+++ b/utility/templates/utility/SectionForm.html
@@ -3,7 +3,7 @@
 {% extends "base_cmms.html" %}
 
 {% block title %}
-    <title>cmms utility - Section</title>
+    cmms utility - Section
 {% endblock %}
 {% block content %}
   <form method="post">
