--- a/utility/templates/utility/profile.html
+++ b/utility/templates/utility/profile.html
@@ -3,7 +3,7 @@
 {% extends "base_cmms.html" %}
 
 {% block title %}
-    <title>cmms User Profile</title>
+    cmms User Profile
 {% endblock %}
 {% block content %}
   <form method="post">
