--- a/utility/templates/utility/DepartmentForm.html
+++ b/utility/templates/utility/DepartmentForm.html
@@ -3,7 +3,7 @@
 {% extends "base_cmms.html" %}
 
 {% block title %}
-    <title>cmms utility - Department</title>
+    cmms utility - Department
 {% endblock %}
 {% block content %}
   <form method="post">
